# typtrac

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: english1k.txt
include/: app.h  app_data.h  app_window.h  color.h  focus_state.h  input.h  input_event.h  language.h  pair_timer.h  pair_times.h  stats_box.h  terminal.h  time_queue.h  type_box.h  type_box_formatting.h  type_stats.h  type_text.h  type_window.h  utils.h  window.h  word_picker.h
include/languages/: english1k.h
src/: CMakeLists.txt  app.cpp  app_data.cpp  app_window.cpp  color.cpp  focus_state.cpp  input.cpp  input_event.cpp  language.cpp  main.cpp  pair_timer.cpp  pair_times.cpp  stats_box.cpp  terminal.cpp  time_queue.cpp  type_box.cpp  type_box_formatting.cpp  type_stats.cpp  type_text.cpp  type_window.cpp  utils.cpp  window.cpp  word_picker.cpp
utils/: dictionary_to_header.py
